# budgie-backgrounds

.github/workflows/: build.yml
backgrounds/: abstract-spiral.jxl  beacon-street-sunset.jxl  blue-periwinkle.jxl  canyon-wren.jxl  casa-mila.jxl  extreme-desert-hike.jxl  high-trestle-trail.jxl  lake-sherburne.jxl  meson.build  oakland-zoo-otters.jxl  ocean-waves.jxl  perched-osprey.jxl  piazza-gae-aulenti.jxl  roman-colosseum.jxl  saturnian-profile.jxl  singaporean-cityscape.jxl  tea-gardens.jxl  the-spices-of-life.jxl  valley-midnight.jxl  waves-midnight.jxl
data/: budgie-backgrounds.xml.in
